--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="preload" href="https://fonts.googleapis.com/css?family=Courgette:400&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Courgette:400&display=swap"></noscript>
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=yb48OH"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=yb48OH" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=GRNhEP"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=GRNhEP" type="text/css">
 
   
   
@@ -31,15 +29,15 @@
 </head>
 <body>
   
-  <section data-bs-version="5.1" class="menu menu3 cid-udmKfEMHOU" once="menu" id="menu03-0">
+  <section data-bs-version="5.1" class="menu menu2 cid-ue4PkTzALn" once="menu" id="menu02-l">
 	
 
 	<nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
 		<div class="container">
 			<div class="navbar-brand">
 				<span class="navbar-logo">
-					<a href="index.html">
-						<img src="assets/images/logofondoblanco-removebg-preview.png" alt="logo andrea saavedra" style="height: 4rem;">
+					<a href="index.html#inicio">
+						<img src="assets/images/logofondoblanco.png" alt="Andrea Saavedra Logo" style="height: 5rem;">
 					</a>
 				</span>
 				
@@ -54,11 +52,14 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-						<a class="nav-link link text-black show text-primary display-4" href="index.html#servicios" aria-expanded="false">Servicios</a>
+						<a class="nav-link link text-black text-primary display-4" href="page1.html">Sobre mi</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link link text-black text-primary display-4" href="index.html#servicios" aria-expanded="false">Servicios</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link link text-black text-primary display-4" href="index.html#testimonios">Testimonios</a>
-					</li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#preguntas-frecuentes">Preguntas</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#contacto">Contacto</a></li></ul>
+					</li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#preguntas-frecuentes">Preguntas</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#contacto">Contactos</a></li></ul>
 				<div class="icons-menu">
 					<a class="iconfont-wrapper" href="https://mobiri.se">
 						<span class="p-2 mbr-iconfont socicon-whatsapp socicon" style="color: rgb(26, 162, 162); fill: rgb(26, 162, 162);"></span>
@@ -83,10 +84,10 @@
     <div class="row justify-content-center">
       <div class="col-md-12 mb-5 content-head">
         <h1 class="mbr-section-title mbr-fonts-style display-1"><strong>Coach y Terapeuta Holística</strong></h1>
-        <p class="mbr-text mbr-fonts-style mt-4 display-7">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque elit ullamcorper dignissim cras tincidunt.
-        </p>
-        <div class="mbr-section-btn mt-4"><a class="btn btn-primary display-7" href="page1.html">Conoce más ...</a></div>
+        <p class="mbr-text mbr-fonts-style mt-4 display-7">Bienvenidos a mi espacio de sanación y bienestar, donde encontrarás terapias holísticas diseñadas para alcanzar equilibrio y paz en tu vida.
+<br>
+<br>Nos enfocamos en resolver problemas pasados y presentes, prevenir dificultades futuras y sanar desde la raíz. Ofrecemos servicios personalizados para enfrentar desafíos de forma proactiva y consciente.</p>
+        <div class="mbr-section-btn mt-4"><a class="btn btn-primary display-7" href="page1.html">Más sobre mi...</a></div>
       </div>
     </div>
 
@@ -108,7 +109,7 @@
         <div class="mbr-section-head mb-5">
           <h4 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
             <strong>Servicios</strong></h4>
-          
+          <h5 class="mbr-section-subtitle mbr-fonts-style align-center mt-4 mb-0 display-7"><div><span style="font-size: 1.4rem;">Con amor y dedicación, estoy aquí para ayudarte.</span><br></div></h5>
         </div>
       </div>
     </div>
@@ -117,71 +118,67 @@
         <div class="item-wrapper">
           <div class="item-head">
             <h5 class="item-title mbr-fonts-style mb-0 display-5">
-              <strong>Starter</strong>
-            </h5>
-            <h6 class="item-subtitle mbr-fonts-style mb-0 display-7"></h6>
+              <strong>Reiki&nbsp;</strong></h5>
+            <h6 class="item-subtitle mbr-fonts-style mb-0 display-7">Descrubre el poder del Reiki<br><br></h6>
           </div>
           <div class="item-content">
             <p class="mbr-text mbr-fonts-style display-7">
-              id donec ultrices tincidunt arcu&nbsp;id donec ultrices tincidunt arcu</p>
+              El Reiki es una técnica japonesa de sanación que utiliza la energía universal para equilibrar y restaurar el flujo energético del cuerpo, tanto para personas, como para mascotas.<br><br><strong>Para personas:</strong></p>
             <div class="mb-4">
             </div>
             <div class="counter-container mbr-text mbr-fonts-style display-7">
               <ul>
-                <li>ltrices tincid</li>
-                <li>ltrices tincid</li>
-                <li>ltrices tincid</li>
+                <li>Induce relajación profunda, reduciendo estrés y ansiedad.</li>
+                <li>Libera bloqueos emocionales, restaurando la armonía interior y aliviando el dolor.</li>
+                <li>Mejora el sueño, aumenta la energía vital y apoya la curación natural del cuerpo.</li></ul><p><span style="font-size: 1.4rem;"><strong>Para mascotas:</strong></span></p><ul><li>Calma mascotas nerviosas o ansiosas, alivia el dolor y facilita la recuperación de enfermedades o cirugías.</li><li>Ayuda a mejorar comportamientos negativos causados por el estrés o trauma, promoviendo su bienestar general.</li></ul><ul>
               </ul>
             </div>
           </div>
-          <div class="mbr-section-btn item-footer"><a href="" class="btn item-btn btn-primary display-7">Obtener este servicio</a></div>
+          <div class="mbr-section-btn item-footer"><a href="index.html#inicio" class="btn item-btn btn-primary display-7">Saber más ...</a></div>
         </div>
       </div>
       <div class="item features-without-image col-12 col-md-6 col-lg-4 item-mb">
         <div class="item-wrapper">
           <div class="item-head">
             <h5 class="item-title mbr-fonts-style mb-0 display-5">
-              <strong>Standard</strong>
-            </h5>
-            <h6 class="item-subtitle mbr-fonts-style mt-0 mb-0 display-7"></h6>
+              <strong>Terapia de Flores</strong></h5>
+            <h6 class="item-subtitle mbr-fonts-style mt-0 mb-0 display-7">Sanación natural y Personalizada<br><br></h6>
           </div>
           <div class="item-content">
             <p class="mbr-text mbr-fonts-style display-7">
-              id donec ultrices tincidunt arcu&nbsp;id donec ultrices tincidunt arcu</p>
+              La Terapia de Flores es una técnica de sanación holística que utiliza esencias florales para equilibrar las emociones y promover el bienestar integral.</p>
             <div class="mb-4">
             </div>
             <div class="counter-container mbr-text mbr-fonts-style display-7">
               <ul>
-                <li>id donec</li>
-                <li>id donec</li>
-                <li>id donec</li>
+                <li>Las esencias florales liberan bloqueos emocionales y restauran la armonía interior.</li>
+                <li>Proporciona reducción del estrés y la ansiedad con propiedades calmantes de las flores.</li>
+                <li>Eleva el estado de ánimo, brindando apoyo emocional durante cambios y fortaleciendo la autoconfianza.</li><li>Promueve la autorreflexión y el autoconocimiento, facilitando un mayor entendimiento de las emociones y necesidades personales.</li>
               </ul>
             </div>
           </div>
-          <div class="mbr-section-btn item-footer"><a href="" class="btn item-btn btn-primary display-7">Obtener este servicio</a></div>
+          <div class="mbr-section-btn item-footer"><a href="" class="btn item-btn btn-primary display-7">Saber más ...</a></div>
         </div>
       </div>
       <div class="item features-without-image col-12 col-md-6 col-lg-4 item-mb">
         <div class="item-wrapper">
           <div class="item-head">
             <h5 class="item-title mbr-fonts-style mb-0 display-5">
-              <strong>Advanced</strong>
-            </h5>
-            <h6 class="item-subtitle mbr-fonts-style mt-0 mb-0 display-7"></h6>
+              <strong>Armonización Chakras</strong></h5>
+            <h6 class="item-subtitle mbr-fonts-style mt-0 mb-0 display-7">Desbloqueo y Armonización de Chakras con Péndulo</h6>
           </div>
           <div class="item-content">
-            <p class="mbr-text mbr-fonts-style display-7">
-              id donec ultrices tincidunt arcu&nbsp;id donec ultrices tincidunt arcu</p>
+            <p class="mbr-text mbr-fonts-style display-7">El Desbloqueo y Armonización de Chakras equilibra la energía del cuerpo mediante un péndulo para detectar y corregir desequilibrios, promoviendo bienestar integral.<br><br><strong>Para personas:</strong></p>
             <div class="mb-4"></div>
             <div class="counter-container mbr-text mbr-fonts-style display-7">
               <ul>
-                <li>&nbsp;ultrices tincidunt</li>
-                <li>&nbsp;ultrices tincidunt</li>
-                <li>&nbsp;ultrices tincidunt</li>
+                <li>Restaura el equilibrio energético del cuerpo, promoviendo la salud general.</li>
+                <li>Facilita la liberación de bloqueos emocionales y la sanación de traumas pasados.</li>
+                <li>Alivia dolores y malestares físicos asociados con desequilibrios energéticos.</li></ul><p><strong>Para mascotas:</strong></p><ul><li>Reducción del estrés y ansiedad, ayudando a calmar a mascotas nerviosas.</li><li>Alivio del dolor y facilitación de la recuperación de enfermedades o cirugías.</li>
               </ul>
             </div>
           </div>
-          <div class="mbr-section-btn item-footer"><a href="" class="btn item-btn btn-primary display-7">Obtener este servicio</a></div>
+          <div class="mbr-section-btn item-footer"><a href="" class="btn item-btn btn-primary display-7">Saber más ...</a></div>
         </div>
       </div>
     </div>
@@ -315,17 +312,17 @@
 							</div>
 						</div>
 					</div>
-					<div id="bootstrap-accordion_4" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
+					<div id="bootstrap-accordion_9" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
 						<div class="card">
 							<div class="card-header" role="tab" id="headingOne">
-								<a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_4" aria-expanded="false" aria-controls="collapse1">
+								<a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_9" aria-expanded="false" aria-controls="collapse1">
 									<h6 class="panel-title-edit mbr-semibold mbr-fonts-style mb-0 display-5">
 										How much does delivery cost?
 									</h6>
 									<span class="sign mbr-iconfont mobi-mbri-arrow-down"></span>
 								</a>
 							</div>
-							<div id="collapse1_4" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_4">
+							<div id="collapse1_9" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_9">
 								<div class="panel-body">
 									<p class="mbr-fonts-style panel-text display-7">
 										Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vestibulum
@@ -339,14 +336,14 @@
 						</div>
 						<div class="card">
 							<div class="card-header" role="tab" id="headingOne">
-								<a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse2_4" aria-expanded="false" aria-controls="collapse2">
+								<a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse2_9" aria-expanded="false" aria-controls="collapse2">
 									<h6 class="panel-title-edit mbr-semibold mbr-fonts-style mb-0 display-5">
 										What is the estimated delivery time?
 									</h6>
 									<span class="sign mbr-iconfont mobi-mbri-arrow-down"></span>
 								</a>
 							</div>
-							<div id="collapse2_4" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_4">
+							<div id="collapse2_9" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_9">
 								<div class="panel-body">
 									<p class="mbr-fonts-style panel-text display-7">
 										Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vestibulum
@@ -360,14 +357,14 @@
 						</div>
 						<div class="card">
 							<div class="card-header" role="tab" id="headingOne">
-								<a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse3_4" aria-expanded="false" aria-controls="collapse3">
+								<a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse3_9" aria-expanded="false" aria-controls="collapse3">
 									<h6 class="panel-title-edit mbr-semibold mbr-fonts-style mb-0 display-5">
 										Do you offer same-day delivery?
 									</h6>
 									<span class="sign mbr-iconfont mobi-mbri-arrow-down"></span>
 								</a>
 							</div>
-							<div id="collapse3_4" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_4">
+							<div id="collapse3_9" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_9">
 								<div class="panel-body">
 									<p class="mbr-fonts-style panel-text display-7">
 										Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vestibulum
@@ -381,14 +378,14 @@
 						</div>
 						<div class="card">
 							<div class="card-header" role="tab" id="headingOne">
-								<a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse4_4" aria-expanded="false" aria-controls="collapse4">
+								<a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse4_9" aria-expanded="false" aria-controls="collapse4">
 									<h6 class="panel-title-edit mbr-semibold mbr-fonts-style mb-0 display-5">
 										Can I track my delivery order?
 									</h6>
 									<span class="sign mbr-iconfont mobi-mbri-arrow-down"></span>
 								</a>
 							</div>
-							<div id="collapse4_4" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_4">
+							<div id="collapse4_9" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_9">
 								<div class="panel-body">
 									<p class="mbr-fonts-style panel-text display-7">
 										Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vestibulum
