--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=GRNhEP"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=GRNhEP" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=aSClea"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=aSClea" type="text/css">
 
   
   
@@ -134,7 +134,7 @@
               </ul>
             </div>
           </div>
-          <div class="mbr-section-btn item-footer"><a href="index.html#inicio" class="btn item-btn btn-primary display-7">Saber más ...</a></div>
+          <div class="mbr-section-btn item-footer"><a href="page2.html" class="btn item-btn btn-primary display-7">Saber más ...</a></div>
         </div>
       </div>
       <div class="item features-without-image col-12 col-md-6 col-lg-4 item-mb">
@@ -157,7 +157,7 @@
               </ul>
             </div>
           </div>
-          <div class="mbr-section-btn item-footer"><a href="" class="btn item-btn btn-primary display-7">Saber más ...</a></div>
+          <div class="mbr-section-btn item-footer"><a href="page3.html" class="btn item-btn btn-primary display-7">Saber más ...</a></div>
         </div>
       </div>
       <div class="item features-without-image col-12 col-md-6 col-lg-4 item-mb">
@@ -178,7 +178,7 @@
               </ul>
             </div>
           </div>
-          <div class="mbr-section-btn item-footer"><a href="" class="btn item-btn btn-primary display-7">Saber más ...</a></div>
+          <div class="mbr-section-btn item-footer"><a href="page4.html" class="btn item-btn btn-primary display-7">Saber más ...</a></div>
         </div>
       </div>
     </div>
